--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -564,14 +564,23 @@
 }
 
 @book{bolton2005contract,
-  title={Contract theory},
+  title={Contract Theory},
   author={Bolton, Patrick and Dewatripont, Mathias and others},
   year={2005},
   publisher={MIT press}
 }
 
+@article{gerber2014reporting,
+  title={{Reporting Guidelines for Experimental Research: A Report from the Experimental Research Section Standards Committee}},
+  author={Gerber, Alan S and Arceneaux, Kevin and Boudreau, Cheryl and Dowling, Conor and Hillygus, Sunshine D and Palfrey, Thomas and Biggers, Daniel R and Hendry, David J},
+  journal={Journal of Experimental Political Science},
+  pages={81--98},
+  year={2014},
+  publisher={Cambridge University Press}
+}
+
 @article{itoh1991incentives,
-  title={Incentives to help in multi-agent situations},
+  title={{Incentives to Help in Multi-Agent Situations}},
   author={Itoh, Hideshi},
   journal={Econometrica: Journal of the Econometric Society},
   pages={611--636},
